src/objects/AssessmentContainer__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AssessmentContainers</relationshipLabel>
        <relationshipName>AssessmentContainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Completed by:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AssessmentContainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Completed_on__c</fullName>
        <label>Assessment Completed on:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AssessmentContainers</relationshipLabel>
        <relationshipName>AssessmentContainers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <label>Legacy Database Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Risk_Category__c</fullName>
        <label>Overall Risk Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <defaultValue>&quot;Manual&quot;</defaultValue>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>assessmentCode__c</fullName>
        <label>assessmentCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assessmentName__c</fullName>
        <label>assessmentName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assmResult__c</fullName>
        <label>Result</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>deleted_By_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>deleted By user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recIdFromassessment__c</fullName>
        <label>recIdFromAssessment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AssessmentContainer</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>assessmentContainer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AssessmentContainers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>